--- a/index.html
+++ b/index.html
@@ -10,6 +10,27 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
 
+        <!-- Facebook OpenGraph Data -->
+        <meta property="og:title" content="" />
+        <meta property="og:type" content="website" />
+        <!-- If it's an article:
+        <meta property="og:type" content="article" />
+        <meta property="article:published_time" content = "" />
+        -->
+        <meta property="og:description" content="" />        
+        <meta property="og:url" content=""/>
+        <meta property="og:image" content="" />
+        <meta property="og:site_name" content="" />
+        <meta property="fb:app_id" content=""> 
+
+        <!-- Canonical URL for CMS SEO -->
+        <link rel="canonical" href="" />
+
+        <!-- Twitter Card Metadata. Must activate domain via https://dev.twitter.com/docs/cards -->
+        <meta property="twitter:card" content="summary">
+        <meta property="twitter:site" content="">
+        <meta property="twitter:creator" content="">
+
         <link rel="stylesheet" href="./css/base.css">
             
         <!--[if lte IE 8]>
