Added fancy ASCII logo

--- a/index.html
+++ b/index.html
@@ -48,6 +48,25 @@
         <script src="./js/vendor/jquery-1.8.0.min.js"></script>
         <script src="./js/plugins.js"></script>
         <script src="./js/main.js"></script>
+<!--
 
+$$$                                                         
+$$$                                                         
+$$$                                                         
+$$$                                                         
+$$$   ... ::.. .          . .=:... .         ..,=:  .       
+$$$  7$$$$$$$$$$..    ..$$$$$$$$$$$        $$$$$$$$$$$.     
+$$$$$$$$$. .:$$$$$,. .$$$$$$.. :$$$$$.   $$$$77 . ~$$$$$    
+$$$$$$..     . .$$$$ $$$$.       ..$$$$.$$$$.        ~$$$$  
+$$$$7.          .$$$$$$,          . $$$$$$.           .$$$?.
+$$$?              $$$$..             $$$$.              $$$ 
+$$$.              .$$$               .$$$               .$$~
+.                   ..                . .                .  
+                                                            
+This is Happy Medium's logo. It is happy to see you.
+http://www.itsahappymedium.com 
+ASCII Conversion done by GlassGiant.com.
+
+-->
     </body>
 </html>
